Update owner and source
Updates the `owner` and `source` for the task to make it
distinguishable from the default `eslint` markers.

Signed-off-by: vince-fugnitto <vincent.fugnitto@ericsson.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,8 +8,8 @@
             "script": "test",
             "problemMatcher": [
                 {
-                    "owner": "eslint",
-                    "source": "eslint",
+                    "owner": "vince",
+                    "source": "vince",
                     "applyTo": "allDocuments",
                     "fileLocation": "absolute",
                     "pattern": [
